fixed spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -60,6 +60,10 @@
     width: 70%;
   }
 }
+h2, h3, h4, h5, h6 {
+  margin-top: 1.75em;
+}
+
 .embed-container {
   position: relative;
   padding-bottom: 56.25%;
